ast/testdata/tests/errors/contracts/eof_after_else.rql
contract IfEOF() -> void {
    if x {

    } else
